Fixing spacing in overlay

--- a/assets/css/_gallery.scss
+++ b/assets/css/_gallery.scss
@@ -59,7 +59,7 @@
     -webkit-transform: scale(0,1);
     -ms-transform: scale(0,1);
     transform: scale(0,1);
-    padding-top: 1em;
+    padding-top: .9em;
   }
   
   .hovereffect:hover .overlay {
